# VulkanEngine

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/resources/shaders/opengl/: DiffuseShader.frag
Engine/shaders/opengl/: DiffuseShader.vert
Engine/src/: main.cpp
Engine/src/backends/: IRenderer.h
Engine/src/backends/opengl/: OpenGLRenderer.cpp  OpenGLRenderer.h
Engine/src/core/: Singleton.h
Engine/src/core/loaders/images/: ImageLoader.cpp  ImageLoader.h
Engine/src/core/loaders/meshes/: MeshLoader.cpp  MeshLoader.h
Engine/src/core/logger/: Log.cpp  Log.h
Engine/src/core/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/src/core/systems/: AudioSystem.cpp  AudioSystem.h
Engine/src/ecs/: Component.cpp  Component.h  GameObject.cpp  GameObject.h
Engine/src/ecs/components/: AudioSource.cpp  AudioSource.h
Engine/src/utils/: File.h
Engine/src/window/: Window.cpp  Window.h
